poker-planning/kustomization/base/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poker-planning-frontend
  name: poker-planning-frontend
spec:
  selector:
    matchLabels:
      app: poker-planning-frontend
  template:
    metadata:
      labels:
        app: poker-planning-frontend
    spec:
      containers:
      - image: anddd9527/poker-planning:v1.0.1
        name: frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
