poker-planning/kustomization/base/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poker-planning-server
  name: poker-planning-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poker-planning-server
  template:
    metadata:
      labels:
        app: poker-planning-server
    spec:
      containers:
      - image: anddd9527/poker-planning-server:v1.0.0
        name: server
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
