poker-planning/kustomization/base/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-planning-frontend
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: poker-planning-frontend
