poker-planning/kustomization/base/svc-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: poker-planning-server
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: poker-planning-server
